Make TemplateManager a proper singleton, destroyed after application shutdown.

BUG: 266211